benchmarks/c/pregen/re2c/lex_02__words1.cc
/* Generated by re2c */
#include "re2c/base.h"

namespace re2c_lex_02__words1 {





#define YYMAXFILL 10


struct input_t {
    FILE* file;
    char *buf;
    char *lim;
    char *cur;
    char *mar;
    char *tok;
    
    
    taglistpool_t tlp;
    int eof;
};

static inline void free_input(input_t *in) {
    free(in->buf);
    taglistpool_free(&in->tlp);
    if (in->file) fclose(in->file);
}

static inline int fill_buffered_eof(input_t *in) {
    size_t free;
    if (in->eof) return 1;

    free = in->tok - in->buf;
    assert(free > 0);

    memmove(in->buf, in->tok, in->lim - in->tok);
    in->lim -= free;
    in->cur -= free;
    in->mar -= free;
    in->tok -= free;
    

    in->lim += fread(in->lim, 1, free, in->file);
    in->lim[0] = 0;

    if (in->lim < in->buf + SIZE) {
        in->eof = 1;
    }

    return 0;
}

static inline int fill_buffered_scc(input_t *in, size_t need) {
    size_t free;
    if (in->eof) return 1;

    free = in->tok - in->buf;
    assert(free >= need);

    memmove(in->buf, in->tok, in->lim - in->tok);
    in->lim -= free;
    in->cur -= free;
    in->mar -= free;
    in->tok -= free;
    

    in->lim += fread(in->lim, 1, free, in->file);

    if (in->lim < in->buf + SIZE) {
        in->eof = 1;
        memset(in->lim, 0, YYMAXFILL);
        in->lim += YYMAXFILL;
    }

    return 0;
}

static inline void init_input_simple(input_t *in, const char* fname) {
    FILE* f = fopen(fname, "rb");

    fseek(f, 0, SEEK_END);
    size_t flen = (size_t) ftell(f);
    fseek(f, 0, SEEK_SET);

    in->file = nullptr; // unused
    in->buf = (char*) malloc(flen + 1);
    in->lim = nullptr; // unused
    in->cur = in->mar = in->tok = in->buf;
    
    
    taglistpool_init(&in->tlp);
    in->eof = 0; // unused

    fread(in->buf, 1, flen, f);
    in->buf[flen] = 0;

    fclose(f);
}

static inline void init_input_buffered_eof(input_t *in, const char* fname) {
    in->file = fopen(fname, "rb");
    in->buf = (char*) malloc(SIZE + 1);
    in->lim = in->buf + SIZE;
    in->cur = in->lim;
    in->mar = in->lim;
    in->tok = in->lim;
    
    
    taglistpool_init(&in->tlp);
    in->eof = 0;
    fill_buffered_eof(in);
}

static inline void init_input_buffered_scc(input_t *in, const char* fname) {
    in->file = fopen(fname, "rb");
    in->buf = (char*) malloc(SIZE + YYMAXFILL);
    in->lim = in->buf + SIZE;
    in->cur = in->lim;
    in->mar = in->lim;
    in->tok = in->lim;
    
    
    taglistpool_init(&in->tlp);
    in->eof = 0;
}

#define YYCURSOR cur
#define YYMARKER mar
#define YYTOKEN tok
#define TLP_CLEAR() do { \
    in->tlp.next = in->tlp.head; \
     \
} while (0)

int lex_simple(input_t *in) {
    char *cur = in->buf, *mar, *tok;
    (void) mar; // maybe unused
    (void) tok; // maybe unused
    
    
    
    
    long count = 0;
loop:
    tok = cur;
    
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy1;
		case 'F': goto yy4;
		case 'M': goto yy5;
		case 'S': goto yy6;
		case 'T': goto yy7;
		case 'W': goto yy8;
		default: goto yy2;
	}
yy1:
	++YYCURSOR;
	{ return count; }
yy2:
	++YYCURSOR;
yy3:
	{ return -1; }
yy4:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'r': goto yy9;
		default: goto yy3;
	}
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'o': goto yy11;
		default: goto yy3;
	}
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'a': goto yy12;
		case 'u': goto yy11;
		default: goto yy3;
	}
yy7:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'h': goto yy13;
		case 'u': goto yy14;
		default: goto yy3;
	}
yy8:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'e': goto yy15;
		default: goto yy3;
	}
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'i': goto yy16;
		default: goto yy10;
	}
yy10:
	YYCURSOR = YYMARKER;
	goto yy3;
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy16;
		default: goto yy10;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy17;
		default: goto yy10;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'u': goto yy18;
		default: goto yy10;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy19;
		default: goto yy10;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'd': goto yy20;
		default: goto yy10;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'd': goto yy21;
		default: goto yy10;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'u': goto yy22;
		default: goto yy10;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy19;
		default: goto yy10;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
		case 's': goto yy16;
		default: goto yy10;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy14;
		default: goto yy10;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy23;
		default: goto yy10;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy16;
		default: goto yy10;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'y': goto yy24;
		default: goto yy10;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\n': goto yy25;
		default: goto yy10;
	}
yy25:
	++YYCURSOR;
	{
        OUTS(YYTOKEN, YYCURSOR);
        goto loop;
    }
}

}

#undef YYCURSOR
#undef YYMARKER
#undef YYTOKEN
#undef TLP_CLEAR

#define YYCURSOR in->cur
#define YYMARKER in->mar
#define YYLIMIT in->lim
#define YYTOKEN in->tok
#define TLP_CLEAR() do { \
    in->tlp.next = in->tlp.head; \
     \
} while (0)

int lex_buffered_eof(input_t *in) {
    
    
    long count = 0;
loop:
    in->tok = in->cur;
    
{
	char yych;
yyFillLabel0:
	yych = *YYCURSOR;
	switch (yych) {
		case 'F': goto yy29;
		case 'M': goto yy30;
		case 'S': goto yy31;
		case 'T': goto yy32;
		case 'W': goto yy33;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel0;
				goto yy51;
			}
			goto yy27;
	}
yy27:
	++YYCURSOR;
yy28:
	{ return -1; }
yy29:
	YYMARKER = ++YYCURSOR;
yyFillLabel1:
	yych = *YYCURSOR;
	switch (yych) {
		case 'r': goto yy34;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel1;
			}
			goto yy28;
	}
yy30:
	YYMARKER = ++YYCURSOR;
yyFillLabel2:
	yych = *YYCURSOR;
	switch (yych) {
		case 'o': goto yy36;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel2;
			}
			goto yy28;
	}
yy31:
	YYMARKER = ++YYCURSOR;
yyFillLabel3:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy37;
		case 'u': goto yy36;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel3;
			}
			goto yy28;
	}
yy32:
	YYMARKER = ++YYCURSOR;
yyFillLabel4:
	yych = *YYCURSOR;
	switch (yych) {
		case 'h': goto yy38;
		case 'u': goto yy39;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel4;
			}
			goto yy28;
	}
yy33:
	YYMARKER = ++YYCURSOR;
yyFillLabel5:
	yych = *YYCURSOR;
	switch (yych) {
		case 'e': goto yy40;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel5;
			}
			goto yy28;
	}
yy34:
	++YYCURSOR;
yyFillLabel6:
	yych = *YYCURSOR;
	switch (yych) {
		case 'i': goto yy41;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel6;
			}
			goto yy35;
	}
yy35:
	YYCURSOR = YYMARKER;
	goto yy28;
yy36:
	++YYCURSOR;
yyFillLabel7:
	yych = *YYCURSOR;
	switch (yych) {
		case 'n': goto yy41;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel7;
			}
			goto yy35;
	}
yy37:
	++YYCURSOR;
yyFillLabel8:
	yych = *YYCURSOR;
	switch (yych) {
		case 't': goto yy42;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel8;
			}
			goto yy35;
	}
yy38:
	++YYCURSOR;
yyFillLabel9:
	yych = *YYCURSOR;
	switch (yych) {
		case 'u': goto yy43;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel9;
			}
			goto yy35;
	}
yy39:
	++YYCURSOR;
yyFillLabel10:
	yych = *YYCURSOR;
	switch (yych) {
		case 'e': goto yy44;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel10;
			}
			goto yy35;
	}
yy40:
	++YYCURSOR;
yyFillLabel11:
	yych = *YYCURSOR;
	switch (yych) {
		case 'd': goto yy45;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel11;
			}
			goto yy35;
	}
yy41:
	++YYCURSOR;
yyFillLabel12:
	yych = *YYCURSOR;
	switch (yych) {
		case 'd': goto yy46;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel12;
			}
			goto yy35;
	}
yy42:
	++YYCURSOR;
yyFillLabel13:
	yych = *YYCURSOR;
	switch (yych) {
		case 'u': goto yy47;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel13;
			}
			goto yy35;
	}
yy43:
	++YYCURSOR;
yyFillLabel14:
	yych = *YYCURSOR;
	switch (yych) {
		case 'r': goto yy44;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel14;
			}
			goto yy35;
	}
yy44:
	++YYCURSOR;
yyFillLabel15:
	yych = *YYCURSOR;
	switch (yych) {
		case 's': goto yy41;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel15;
			}
			goto yy35;
	}
yy45:
	++YYCURSOR;
yyFillLabel16:
	yych = *YYCURSOR;
	switch (yych) {
		case 'n': goto yy39;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel16;
			}
			goto yy35;
	}
yy46:
	++YYCURSOR;
yyFillLabel17:
	yych = *YYCURSOR;
	switch (yych) {
		case 'a': goto yy48;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel17;
			}
			goto yy35;
	}
yy47:
	++YYCURSOR;
yyFillLabel18:
	yych = *YYCURSOR;
	switch (yych) {
		case 'r': goto yy41;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel18;
			}
			goto yy35;
	}
yy48:
	++YYCURSOR;
yyFillLabel19:
	yych = *YYCURSOR;
	switch (yych) {
		case 'y': goto yy49;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel19;
			}
			goto yy35;
	}
yy49:
	++YYCURSOR;
yyFillLabel20:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n': goto yy50;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel20;
			}
			goto yy35;
	}
yy50:
	++YYCURSOR;
	{
        OUTS(YYTOKEN, YYCURSOR);
        goto loop;
    }
yy51:
	{ return count; }
}

}

int lex_buffered_scc(input_t *in) {
    
    
    long count = 0;
loop:
    in->tok = in->cur;
    
{
	char yych;
	if ((YYLIMIT - YYCURSOR) < 10) if (fill_buffered_scc(in, 10) != 0) return -2;
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy53;
		case 'F': goto yy56;
		case 'M': goto yy57;
		case 'S': goto yy58;
		case 'T': goto yy59;
		case 'W': goto yy60;
		default: goto yy54;
	}
yy53:
	++YYCURSOR;
	{ return count; }
yy54:
	++YYCURSOR;
yy55:
	{ return -1; }
yy56:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'r': goto yy61;
		default: goto yy55;
	}
yy57:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'o': goto yy63;
		default: goto yy55;
	}
yy58:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'a': goto yy64;
		case 'u': goto yy63;
		default: goto yy55;
	}
yy59:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'h': goto yy65;
		case 'u': goto yy66;
		default: goto yy55;
	}
yy60:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'e': goto yy67;
		default: goto yy55;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'i': goto yy68;
		default: goto yy62;
	}
yy62:
	YYCURSOR = YYMARKER;
	goto yy55;
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy68;
		default: goto yy62;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy69;
		default: goto yy62;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'u': goto yy70;
		default: goto yy62;
	}
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy71;
		default: goto yy62;
	}
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'd': goto yy72;
		default: goto yy62;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'd': goto yy73;
		default: goto yy62;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'u': goto yy74;
		default: goto yy62;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy71;
		default: goto yy62;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
		case 's': goto yy68;
		default: goto yy62;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy66;
		default: goto yy62;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy75;
		default: goto yy62;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy68;
		default: goto yy62;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'y': goto yy76;
		default: goto yy62;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
		case '\n': goto yy77;
		default: goto yy62;
	}
yy77:
	++YYCURSOR;
	{
        OUTS(YYTOKEN, YYCURSOR);
        goto loop;
    }
}

}

#undef YYCURSOR
#undef YYMARKER
#undef YYLIMIT
#undef YYTOKEN
#undef TLP_CLEAR

#define FN_BENCH(suffix) \
void bench_##suffix::operator()( \
        benchmark::State &state, const char* input, long expected) const { \
    long count = 0; \
    for (auto _ : state) { \
        input_t in; \
        init_input_##suffix(&in, input); \
        count = lex_##suffix(&in); \
        free_input(&in); \
    } \
    if (count != expected) state.SkipWithError("re2c: error"); \
}
FN_BENCH(simple)
FN_BENCH(buffered_eof)
FN_BENCH(buffered_scc)
#undef FN_BENCH

#define FN_TEST(suffix) \
bool test_##suffix(const char* input, long expected) { \
    input_t in; \
    init_input_##suffix(&in, input); \
    long count = lex_##suffix(&in); \
    switch (count) { \
    default: \
        if (count != expected) { \
            fprintf(stderr, "re2c: wrong count, expected %ld, got %ld\n", expected, count); \
        } \
        break; \
    case -1: \
        fprintf(stderr, "re2c: syntax error\n"); \
        break; \
    case -2: \
        fprintf(stderr, "re2c: yyfill error\n"); \
        break; \
    } \
    free_input(&in); \
    return count == expected; \
}
FN_TEST(simple)
FN_TEST(buffered_eof)
FN_TEST(buffered_scc)
#undef FN_TEST


} // namespace re2c_lex_02__words1

